@@ -30,11 +30,9 @@
          "requires" : {
             "Carp" : "0",
             "Dist::Zilla::Role::BeforeBuild" : "0",
-            "Git::Wrapper" : "0",
+            "Git::Background" : "0.003",
             "Moose" : "0",
             "Path::Tiny" : "0",
-            "Safe::Isa" : "0",
-            "Try::Tiny" : "0",
             "namespace::autoclean" : "0",
             "perl" : "5.006",
             "strict" : "0",
