@@ -17,11 +17,9 @@ my %WriteMakefileArgs = (
     PREREQ_PM        => {
         Carp                             => 0,
         'Dist::Zilla::Role::BeforeBuild' => 0,
-        'Git::Wrapper'                   => 0,
+        'Git::Background'                => '0.003',
         Moose                            => 0,
         'Path::Tiny'                     => 0,
-        'Safe::Isa'                      => 0,
-        'Try::Tiny'                      => 0,
         'namespace::autoclean'           => 0,
         strict                           => 0,
         warnings                         => 0,
@@ -55,14 +53,12 @@ my %FallbackPrereqs = (
     'File::Path'                          => '2.07',
     'File::Spec'                          => 0,
     'File::Spec::Functions'               => 0,
-    'Git::Wrapper'                        => 0,
+    'Git::Background'                     => '0.003',
     Moose                                 => 0,
     'Path::Tiny'                          => 0,
-    'Safe::Isa'                           => 0,
     'Test::DZil'                          => 0,
     'Test::Fatal'                         => 0,
     'Test::More'                          => '0.88',
-    'Try::Tiny'                           => 0,
     lib                                   => 0,
     'namespace::autoclean'                => 0,
     strict                                => 0,
