@@ -1,0 +1,2 @@
+# test cannot be configured to allow "$self->log_fatal() if ..."
+[-ControlStructures::ProhibitPostfixControls]
